files/m-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: default
spec:
  ports:
  - name: front-app
    port: 80
    protocol: TCP
    targetPort: front-app
  selector:
    run: front
  type: NodePort
