files/m-front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab-front-ingress
spec:
  defaultBackend:
    service:
      name: front-service
      port:
        number: 80
